[project]
name = "pyrecount"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
